# LiDAR-Stability-algorithm

./: .gitignore  CHANGELOG.md  LiDAR-Stability-algorithm.code-workspace  OPEN3D_SETUP.md  PROJECT_STATUS.md  QUICK_START.md  README.md  ROADMAP.md  SPRINT_3_SUMMARY.md  pyproject.toml  pytest.ini  requirements.txt
.github/: ## Chat Customization Diagnostics.md  CHANGELOG.md
.github/docs/: MAP_MATCHING_ALGORITHM.md  QUICK_START.md  TERRAIN_FEATURES_EXTRACTION.md
.github/planning/: PLAN_ORIGINAL.md
.github/prompts/: roadmap.prompt.md
.github/sprints/: REORGANIZATION.md  REORGANIZATION_SPRINT1.md  SPRINT_1_BATCH_PROCESSING.md  SPRINT_3_COMPLETION.md  SPRINT_3_SUMMARY.md
.github/technical/: MAP_MATCHING_ALGORITHM_GUIDE.md  MAP_MATCHING_SUMMARY.md
Scripts/config/: vehicle.yaml
Scripts/data-cleaning/: process_doback_routes.py  visualize_doback_route.py
Scripts/ekf/: __init__.py  ekf_batch_processor.py  ekf_fusion.py  run_ekf.py  time_sync.py
Scripts/lidar/: compute_route_terrain_features.py  download_cnig_lidar_tiles.py  laz_reader.py  terrain_features.py  tif_reader.py
Scripts/mapping/: __init__.py
Scripts/ml/: __init__.py  (+4 more)
config/: config.py
docs/: ADAPTIVE_HYPERPARAM_SEARCH_GUIDE.md  PROJECT_STATUS.md  QUICK_START.md  ROADMAP.md
notebooks/: eda_pipeline_report.html  eda_pipeline_report.ipynb
tests/: test_adaptive_hyperparam_search_optuna.py  test_device_constants_enrichment.py  test_sprint1.py  test_sprint2.py  test_sprint3.py  test_sprint5.py
var-analysis/: guia_entrenamiento_evaluacion_sprint5.ipynb  omega_feature_analysis.ipynb
(+84 files in other folders)
