[project]
name = "lidar-stability"
version = "0.1.0"
description = "LiDAR-based stability analysis pipeline for route processing, map-matching, terrain features, and model training"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.21.0",
  "pandas>=1.3.0",
  "scikit-learn>=1.0.0",
  "xgboost>=1.5.0",
  "laspy[lazrs]>=0.7.0",
  "rasterio>=1.2.0",
  "pyproj>=3.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
